...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Game Score: " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p2l-HL-w1j">
                                <rect key="frame" x="0.0" y="60" width="414" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="label_FinalScore"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="27.5" height="63"/>
                                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="label_FrameOneRollOne"/>
                                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
                                                        <color key="textColor" systemColor="systemRedColor"/>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="115.5" height="86"/>
                                                        <color key="backgroundColor" red="0.97647058959999999" green="0.91764706370000004" blue="0.85882353779999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="button_ZeroPin"/>
                                                        <state key="normal" title="Button"/>
                                                        <buttonConfiguration key="configuration" style="plain" title="0">
...
                                                        <rect key="frame" x="117.5" y="0.0" width="115" height="86"/>
                                                        <color key="backgroundColor" red="0.97647058959999999" green="0.91764706370000004" blue="0.85882353779999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="button_OnePin"/>
                                                        <state key="normal" title="Button"/>
                                                        <buttonConfiguration key="configuration" style="plain" title="1">
...
                                                        <rect key="frame" x="234.5" y="0.0" width="115.5" height="86"/>
                                                        <color key="backgroundColor" red="0.97647058959999999" green="0.91764706370000004" blue="0.85882353779999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="button_TwoPin"/>
                                                        <state key="normal" title="Button"/>
                                                        <buttonConfiguration key="configuration" style="plain" title="2">
...
                                                        <rect key="frame" x="117.5" y="0.0" width="115" height="86"/>
                                                        <color key="backgroundColor" red="0.97647058959999999" green="0.91764706370000004" blue="0.85882353779999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="button_FourPin"/>
                                                        <state key="normal" title="Button"/>
                                                        <buttonConfiguration key="configuration" style="plain" title="4">
...
                                                        <rect key="frame" x="234.5" y="0.0" width="115.5" height="86"/>
                                                        <color key="backgroundColor" red="0.97647058959999999" green="0.91764706370000004" blue="0.85882353779999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="button_FivePin"/>
                                                        <state key="normal" title="Button"/>
                                                        <buttonConfiguration key="configuration" style="plain" title="5">
...
                                                        <rect key="frame" x="117.5" y="0.0" width="115" height="86"/>
                                                        <color key="backgroundColor" red="0.97647058959999999" green="0.91764706370000004" blue="0.85882353779999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="button_TenPin"/>
                                                        <state key="normal" title="Button"/>
                                                        <buttonConfiguration key="configuration" style="plain" title="10">
...
                                                        <rect key="frame" x="234.5" y="0.0" width="115.5" height="86"/>
                                                        <color key="backgroundColor" red="0.97647058959999999" green="0.91764706370000004" blue="0.85882353779999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="button_Reset"/>
                                                        <state key="normal" title="Button"/>
                                                        <buttonConfiguration key="configuration" style="plain" title="Reset">
...
                                <rect key="frame" x="32" y="798" width="350" height="48"/>
                                <color key="backgroundColor" systemColor="systemYellowColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="button_FinalScore"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="hXZ-Ta-ruL"/>
...
